# django-admin-yew-tailwind

./: .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh
.github/workflows/: cd.yml  ci-rust.yml  ci.yml  update_pr.yml
docs/source/: getting_started.rst  index.rst  license.rst
tests/: test_something.py
tests/server/: settings.py  urls.py
tests/server/example/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
tests/server/example/migrations/: 0001_initial.py
widget/: .gitignore  Cargo.toml  Trunk.toml  tailwind.config.js
widget/scripts/: build_tailwind.sh  to_template.py
widget/src/: app.rs  main.rs
yewtail/: __init__.py  admin.py  apps.py  exceptions.py  models.py  urls.py
yewtail/migrations/: 0001_initial.py
