[package]
name = "yewtail-widget"
description = "A widget built in Yew, for use in the yewtail example django library"
keywords = ["django", "tailwind", "yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
